# yagbe

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md  emconfig.bat  emmake.bat  main.cpp  vcpkg_windows.txt  yagbe.html  yagbe.js  yagbe.wasm
.github/: main.workflow
.github/workflows/: push.yml  wasm_build.yml  win_build  win_build.yml
Modules/: CommonFunctions.cmake
docker/: build.sh  build_debug.sh  docker_emscripten.sh
renderer/: sdl2_renderer.hpp
serializer/: CMakeLists.txt  cloud_serializer.hpp  serializer.cpp  serializer.hpp
tests/: main.cpp
tests/operands/: CMakeLists.txt  main.cpp
tests/roms/: credits.txt
vm/: context.cpp  context.hpp  gpu.hpp  instructions.hpp  instructions_cb.hpp  instructions_helpers.hpp  instructions_map.hpp  interrupts.cpp  interrupts.hpp  io_registers.hpp  key_handler.hpp  memory.hpp  operands.hpp  operands_helpers.hpp  operands_map.hpp  registers.hpp  timer.hpp  utils.hpp  zero_ram.hpp
vm/apu/: apu.hpp  base_sound.h  noise_sound.h  square_sound.h  wave_sound.h
vm/gpu/: gpu.hpp  gpu_base.hpp  palette.hpp  spritemap.hpp  tile_info.hpp  tilemap.hpp  tileset.hpp
vm/rom/: mbc_handler.cpp  mbc_handler.hpp  rom_info.hpp
